...
          "stringUnit": {
            "state": "translated",
            "value": "当前天气"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "未来7天月相"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "未来10天"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "收起"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "环境"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "延展预报"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "趋势预报"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "月相"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "降水雷达"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "雷达监测"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "太阳"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "日照月相"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "日月海况"
          }
        },
...
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "ゴールデンアワー" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "골든 아워" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "黄金时段" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "黃金時段" } }
      }
...
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "月の出" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "월출" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "月升" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "月升" } }
      }
...
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "月の入り" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "월몰" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "月落" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "月落" } }
      }
...
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "太陽の位置" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "태양 위치" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "太阳位置" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "太陽位置" } }
      }
...
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "太陽方位角" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "태양 방위각" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "太阳方位角" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "太陽方位角" } }
      }
...
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "太陽高度" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "태양 고도" } },
        "zh-Hans" : { "stringUnit" : { "state" : "translated", "value" : "太阳高度" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "太陽高度" } }
      }
...
